docs: ✏️ Iniciando a documentação Swagger da API
Apenas informações das rotas principais descritas, e foi separado em
duas tags, a documentação está incompleta ainda.
